Carousel - further styling and responsiveness adjustments

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -35,19 +35,19 @@
                         <div class="carousel-inner py-2">
                             <div class="carousel-item active">
                                 <div class="row">
-                                    <div class="col-12 col-md-4">
+                                    <div class="col-12 col-md-4 d-flex justify-content-center">
                                         <a href="" class="guitar-image-link">
-                                            <img src="{{ display.0 }}" class="ms-auto rounded d-block me-0" alt="">
+                                            <img src="{{ display.0 }}" class="rounded d-block carousel-img" alt="">
                                         </a>
                                     </div>
-                                    <div class="col d-none d-md-block col-md-4">
+                                    <div class="col d-none d-md-block col-md-4 d-flex justify-content-center">
                                         <a href="" class="guitar-image-link">
-                                            <img src="{{ display.1 }}" class="ms-auto rounded d-block me-0" alt="">
+                                            <img src="{{ display.1 }}" class="rounded d-block carousel-img" alt="">
                                         </a>
                                     </div>
-                                    <div class="col d-none d-md-block col-md-4">
+                                    <div class="col d-none d-md-block col-md-4 d-flex justify-content-center">
                                         <a href="" class="guitar-image-link">
-                                            <img src="{{ display.2 }}" class="ms-auto rounded d-block me-0" alt="">
+                                            <img src="{{ display.2 }}" class="rounded d-block carousel-img" alt="">
                                         </a>
                                     </div>
                                 </div>
@@ -55,19 +55,19 @@
 
                             <div class="carousel-item">
                                 <div class="row">
-                                    <div class="col-12 col-md-4">
+                                    <div class="col-12 col-md-4 d-flex justify-content-center">
                                         <a href="" class="guitar-image-link">
-                                            <img src="{{ display.3 }}" class="ms-auto rounded d-block me-0" alt="">
+                                            <img src="{{ display.3 }}" class="rounded d-block carousel-img" alt="">
                                         </a>
                                     </div>
-                                    <div class="col d-none d-md-block col-md-4">
+                                    <div class="col d-none d-md-block col-md-4 d-flex justify-content-center">
                                         <a href="" class="guitar-image-link">
-                                            <img src="{{ display.4 }}" class="ms-auto rounded d-block me-0" alt="">
+                                            <img src="{{ display.4 }}" class="rounded d-block carousel-img" alt="">
                                         </a>
                                     </div>
-                                    <div class="col d-none d-md-block col-md-4">
+                                    <div class="col d-none d-md-block col-md-4 d-flex justify-content-center">
                                         <a href="" class="guitar-image-link">
-                                            <img src="{{ display.5 }}" class="ms-auto rounded d-block me-0" alt="">
+                                            <img src="{{ display.5 }}" class="rounded d-block carousel-img" alt="">
                                         </a>
                                     </div>
                                 </div>
