Responsiveness Review - adjustments to center carousel images across screen sizes

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -38,17 +38,17 @@
                                 <div class="row">
                                     <div class="col-12 col-md-4 d-flex justify-content-center">
                                         <a href="{% url 'guitar_detail' display_id.0 %}" class="guitar-image-link">
-                                            <img src="{{ display_image.0 }}" class="rounded d-block carousel-img" alt="">
+                                            <img src="{{ display_image.0 }}" class="rounded d-block carousel-img" alt="Featured guitar image">
                                         </a>
                                     </div>
-                                    <div class="col d-none d-md-block col-md-4 d-flex justify-content-center">
+                                    <div class="d-sm-none d-md-flex col-md-4 justify-content-center">
                                         <a href="{% url 'guitar_detail' display_id.1 %}" class="guitar-image-link">
-                                            <img src="{{ display_image.1 }}" class="rounded d-block carousel-img" alt="">
+                                            <img src="{{ display_image.1 }}" class="rounded d-block carousel-img" alt="Featured guitar image">
                                         </a>
                                     </div>
-                                    <div class="col d-none d-md-block col-md-4 d-flex justify-content-center">
+                                    <div class="d-sm-none d-md-flex col-md-4 justify-content-center">
                                         <a href="{% url 'guitar_detail' display_id.2 %}" class="guitar-image-link">
-                                            <img src="{{ display_image.2 }}" class="rounded d-block carousel-img" alt="">
+                                            <img src="{{ display_image.2 }}" class="rounded d-block carousel-img" alt="Featured guitar image">
                                         </a>
                                     </div>
                                 </div>
@@ -58,17 +58,17 @@
                                 <div class="row">
                                     <div class="col-12 col-md-4 d-flex justify-content-center">
                                         <a href="{% url 'guitar_detail' display_id.3 %}" class="guitar-image-link">
-                                            <img src="{{ display_image.3 }}" class="rounded d-block carousel-img" alt="">
+                                            <img src="{{ display_image.3 }}" class="rounded d-block carousel-img" alt="Featured guitar image">
                                         </a>
                                     </div>
-                                    <div class="col d-none d-md-block col-md-4 d-flex justify-content-center">
+                                    <div class="d-sm-none d-md-flex col-md-4 justify-content-center">
                                         <a href="{% url 'guitar_detail' display_id.4 %}" class="guitar-image-link">
-                                            <img src="{{ display_image.4 }}" class="rounded d-block carousel-img" alt="">
+                                            <img src="{{ display_image.4 }}" class="rounded d-block carousel-img" alt="Featured guitar image">
                                         </a>
                                     </div>
-                                    <div class="col d-none d-md-block col-md-4 d-flex justify-content-center">
+                                    <div class="d-sm-none d-md-flex col-md-4 justify-content-center">
                                         <a href="{% url 'guitar_detail' display_id.5 %}" class="guitar-image-link">
-                                            <img src="{{ display_image.5 }}" class="rounded d-block carousel-img" alt="">
+                                            <img src="{{ display_image.5 }}" class="rounded d-block carousel-img" alt="Featured guitar image">
                                         </a>
                                     </div>
                                 </div>
