Fixed bug with xs screensizes affecting carousel columns

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -41,12 +41,12 @@
                                             <img src="{{ display_image.0 }}" class="rounded d-block carousel-img" alt="Featured guitar image">
                                         </a>
                                     </div>
-                                    <div class="d-sm-none d-md-flex col-md-4 justify-content-center">
+                                    <div class="d-none d-md-flex col-md-4 justify-content-center">
                                         <a href="{% url 'guitar_detail' display_id.1 %}" class="guitar-image-link">
                                             <img src="{{ display_image.1 }}" class="rounded d-block carousel-img" alt="Featured guitar image">
                                         </a>
                                     </div>
-                                    <div class="d-sm-none d-md-flex col-md-4 justify-content-center">
+                                    <div class="d-none d-md-flex col-md-4 justify-content-center">
                                         <a href="{% url 'guitar_detail' display_id.2 %}" class="guitar-image-link">
                                             <img src="{{ display_image.2 }}" class="rounded d-block carousel-img" alt="Featured guitar image">
                                         </a>
