Fixed bug with social media links not working

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -185,12 +185,10 @@ body {
     );
 }
 
-#footer-list li {
+#footer-external-links> a {
     text-decoration: none;
-    list-style-type: none;
-    
+    color: inherit;   
 }
-
 
 /*--Buttons & Search Field ---------------------------------*/
 
