--- a/templates/base.html
+++ b/templates/base.html
@@ -204,11 +204,11 @@
                 </div>
 
                 <!-- Social Media links -->
-                <div class="col-4 d-flex flex-wrap justify-content-between align-items-center">
-                  <a class="fab fa-facebook-square fa-2x" href="https://www.facebook.com/" rel="noopener" target="_blank"></a>
-                  <a class="fab fa-twitter-square fa-2x" href="https://www.twitter.com/" rel="noopener" target="_blank"></a>
-                  <a class="fab fa-instagram fa-2x" href="https://www.instagram.com/" rel="noopener" target="_blank"></a>          
-                  <a class="fab fa-youtube fa-2x" href="https://www.youtube.com/" rel="noopener" target="_blank"></a>
+                <div id="footer-external-links" class="col-4 d-flex flex-wrap justify-content-between align-items-center">
+                  <a href="https://www.facebook.com/" rel="noopener" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
+                  <a href="https://www.twitter.com/" rel="noopener" target="_blank"><i class="fab fa-twitter-square fa-2x" ></i></a>
+                  <a href="https://www.instagram.com/" rel="noopener" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>          
+                  <a href="https://www.youtube.com/" rel="noopener" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
                 </div>
 
               </div>
