--- a/static/css/base.css
+++ b/static/css/base.css
@@ -187,7 +187,7 @@ body {
 
 #footer-external-links> a {
     text-decoration: none;
-    color: inherit;   
+    color: var(--ivory);   
 }
 
 /*--Buttons & Search Field ---------------------------------*/
