--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
 
             <!--Logo-->
             <div class="col-0 col-md-3 align-self-start my-auto py-2 d-none d-md-block">
-              <img class="navbar-logo" src="{{ MEDIA_URL }}GV-Logo.png"/>
+              <img class="navbar-logo" src="{{ MEDIA_URL }}gv-logo.png"/>
             </div>
 
             <!--Site Title-->
