--- a/members/templates/members/profile.html
+++ b/members/templates/members/profile.html
@@ -19,9 +19,12 @@
     <div class="container h-100">
         <div class="row">
             <div class="col mt-2">
-                <h1 class="gold-special-txt text-center mb-3">Member Profile</h1> 
+                <h1 class="gold-special-txt text-center mb-3">Member Profile</h1>
+                <p>Profile for: {{ orders }}</p> 
             </div>
             <div class="row mt-4">
+                
+                <!-- Address -->
                 <div class="col-12 col-md-6">
                     <h4>Address</h4>
                     <form class="mt-4" action="{% url 'profile' %}" method="POST" id="member-profile-form">
@@ -30,16 +33,30 @@
                         <button class="btn btn-gold-outline">Update</button>
                     </form>
                 </div>
-                <!--Outstanding : This section of the profile has not been completed - please refer to README -->
+                <!-- Outstanding : This section of the profile has not been completed - please refer to README -->
                 <div class="col-12 col-md-6 ps-4">
+
+                    <!-- Subscription Plan -->
                     <div class="row">
                         <h4>Subscription Plan</h4>
+                        <p>Active Plan</p>
+                        
+                        <p>Tier:</p>
+                        <p>Start Date:</p>
+                        <p>Monthly Price:</p>
+
                     </div>
+
+                    <!-- Guitar Rack -->
                     <div class="row">
                         <h4 class="mt-5">Guitar Rack</h4>
+
                     </div>
+
+                    <!-- Favourite Guitars -->
                     <div class="row">
                         <h4 class="mt-5">Favourited Guitars</h4>
+
                     </div>
                 </div>
             </div>
