--- a/static/css/base.css
+++ b/static/css/base.css
@@ -45,7 +45,7 @@ body {
     color:var(--ivory);
     background-color: var(--black);
     font-family: var(--standard-text);
-    padding-bottom: 10vh; /*-- retain space for fixed footer */
+    padding-bottom: max(80px, 10vh); /*-- retain space for fixed footer */
 }
 
 
@@ -175,7 +175,7 @@ body {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 7vh; /* any changes also need to align with body padding bottom */
+    height: max(75px, 9vh); /* any changes also need to align with body padding bottom */
     padding-bottom:2vh;
     background-image: linear-gradient(25deg,
     var(--gold-dark),
