Added logic to guitars.html so that 'empty' filtering displays a message and not a blank screen

--- a/guitars/templates/guitars/guitars.html
+++ b/guitars/templates/guitars/guitars.html
@@ -142,13 +142,11 @@
                                 </div>      <!--close card footer -->
                             </div>          <!--close card  -->
                         </div>              <!--close card col -->
-
+                    
+                    {% empty %}
+                    <p class="text-center">Sorry, there are currently no guitars matching your selection, please try another tier.</p>
                     {% endfor %}
                     
-
-
-
-
                 </div>  <!--close sub-parent card row-->
             </div>      <!--close parent card col-->
         </div>          <!--close parent card row-->
