Fixed bug with messages displayed hidden beneath header and relocated confirmation message into body of html confirmation screen

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col-12 col-md-8 offset-md-2 main-content mt-2 my-auto py-2">
                 <p class="lead py-2 gold-txt">{{ order.full_name }}, thank you for subscribing to Guitar Vault!</p>
-                <p>Your order conformation is shown below:</p>
+                <p>Conformation of your order has been sent to {{ order.email }} and is shown below:</p>
 
                 
                <div class="row">
