--- a/templates/base.html
+++ b/templates/base.html
@@ -175,8 +175,10 @@
     {% endblock %}
 
     {% if messages %}
-      <div class="message-container">
-
+      <div class="message-container text-center">
+        {% for message in messages %}
+          {{ message }}
+        {% endfor %}
       </div>
     {% endif %}
 
