--- a/members/templates/members/profile.html
+++ b/members/templates/members/profile.html
@@ -25,42 +25,45 @@
             <div class="row mt-4">
                 
                 <!-- Address -->
-                <div class="col-12 col-md-6">
-                    <h4>Address</h4>
-                    <form class="mt-4" action="{% url 'profile' %}" method="POST" id="member-profile-form">
+                <div class="col-12 col-md-6 ps-4">
+                    <h4 class="gold-txt">Address</h4>
+                    <form class="mt-4 mb-5" action="{% url 'profile' %}" method="POST" id="member-profile-form">
                         {% csrf_token %}
                         {{ form|crispy }}
                         <button class="btn btn-gold-outline">Update</button>
                     </form>
                 </div>
-                <!-- Outstanding : This section of the profile has not been completed - please refer to README -->
+
                 <div class="col-12 col-md-6 ps-4">
-                    <h4>Subscription Plan</h4>
-                    {% for order in orders %} 
-                        <p>Order no: {{ order.order_number }}</p>
-                        <p>Profile: {{ order.member_profile }}</p>
-                        <p>Subscription Tier: {{ order.subscription_plan }}</p>
-                    {% endfor %}
-                    <!-- Subscription Plan -->
-                    <div class="row">
-                        
-                        <p>Active Plan</p>
-                        
-                        <p>Tier:</p>
-                        <p>Start Date:</p>
-                        <p>Monthly Price:</p>
+                <!-- Subscription Plan -->
+                    <h4 class="pb-3 gold-txt">Subscription Plans</h4>
 
-                    </div>
-
+                    <table class="text-center mx-auto subs-table">
+                        <tr>
+                            <th>Order No.</th>
+                            <th>Date Started</th>
+                            <th>Tier</th>
+                            <th>Monthly Fee</th>
+                        </tr>
+                        {% for order in orders %} 
+                            <tr>
+                                <th>{{ order.order_number|truncatechars:14 }}</th>
+                                <th>{{ order.date|date:"DATE_FORMAT" }}</th>
+                                <th>{{ order.subscription_plan }}</th>
+                                <th>£{{ order.subscription_price }}</th>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                    
                     <!-- Guitar Rack -->
                     <div class="row">
-                        <h4 class="mt-5">Guitar Rack</h4>
+                        <h4 class="mt-5 gold-txt">Guitar Rack</h4>
 
                     </div>
 
                     <!-- Favourite Guitars -->
                     <div class="row">
-                        <h4 class="mt-5">Favourited Guitars</h4>
+                        <h4 class="mt-5 gold-txt">Favourited Guitars</h4>
 
                     </div>
                 </div>
